kubernetes/doc-home-cluster/apps/selfhosted/n8n/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: n8n
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: n8n
  ingress:
    # open-webui
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: open-webui
      toPorts:
        - ports:
            - port: "5678"
              protocol: TCP
